# MSC.FNLM.CDD.MagAnomaly

./: compute_anomaly.py  dipole.py  earths_field.py  main.py  map.py  pyproject.toml  readme.md  requirements.txt
pages/: detection_limit.py  dynamic_range.py  earth_magnetic_field.py  home.py  model_type.py
scratches/: folium_map.py  map.py
