[project]
name = "msc-fnlm-cdd-maganomaly"
version = "2.0.0b3"
description = "Informative visualization of magnetic dipole anomalies, using Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "numpy",
    "matplotlib",
    "magnetic_field_calculator",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.3",
]
